--- a/Views/Contrato/Detalle.cshtml
+++ b/Views/Contrato/Detalle.cshtml
@@ -22,7 +22,7 @@
             <span asp-validation-for="Inmu.Direccion" class="text-danger"></span>
         </div>
         <div class="form-group col-md-6 form-group-spacing">
-            <label asp-for="Prop" class="control-label"></label>
+            <label asp-for="Prop" class="control-label">Propietario</label>
             <input asp-for="Prop.NombreCompleto" class="form-control" readonly>
             <span asp-validation-for="Prop.NombreCompleto" class="text-danger"></span>
         </div>
@@ -72,7 +72,7 @@
             <span asp-validation-for="PorcentajeActualizacion" class="text-danger"></span>
         </div>
         <div class="form-group col-md-6 form-group-spacing">
-            <label asp-for="PeriodoActualizacion" class="control-label">Periodo actualización</label>
+            <label asp-for="PeriodoActualizacion" class="control-label">Periodo actualización (Meses)</label>
             <input asp-for="PeriodoActualizacion" class="form-control" readonly>
             <span asp-validation-for="PeriodoActualizacion" class="text-danger"></span>
         </div>
